--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "fs-extra": "^11.3.1",
     "node-cron": "^4.2.1"
   }
 }
