--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Cron server to pull and save SG realtime data.",
   "main": "index.js",
   "scripts": {
+    "start": "pm2 start ecosystem.config.js",
+    "stop": "pm2 kill",
+    "monit": "pm2 monit",
+    "pm-ls": "pm2 ls",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
